fix: correct the color of the bottom scrollbar

--- a/ui.css
+++ b/ui.css
@@ -81,4 +81,4 @@ div.status-bar {
 /* hide the scrollbar */
 ::-webkit-scrollbar{width:5px;background-color:transparent}
 ::-webkit-scrollbar-track{background-color:transparent}
-::-webkit-scrollbar-thumb{background-clip:padding-box;border:3px solid transparent;background-color:#982222;border-width:3px 4px 3px 3px;min-height:45px}
+::-webkit-scrollbar-thumb{background-clip:padding-box;border:3px solid transparent;background-color:transparent;border-width:3px 4px 3px 3px;min-height:45px}
